--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
         <a href="https://wa.me/27767571869" target="_blank"><i class="fab fa-whatsapp"></i></a>
         <a href="https://t.me/+27767571869" target="_blank"><i class="fab fa-telegram"></i></a>
         <a href="https://www.linkedin.com/in/sifiso-n-709b8b42" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://tiktok.com/@talking_tom000" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://tiktok.com/@sindlo_innovations" target="_blank"><i class="fab fa-tiktok"></i></a>
       </div>
     </div>
   </section>
